# vvcdecoder

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/open/source/exoplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/open/source/exoplayer/: MainActivity.kt
app/src/test/java/open/source/exoplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
vvcdecoder/: build.gradle
vvcdecoder/src/androidTest/java/open/source/vvdec/: ExampleInstrumentedTest.kt
vvcdecoder/src/main/: AndroidManifest.xml
vvcdecoder/src/main/cpp/: CMakeLists.txt  jni.cpp
vvcdecoder/src/main/cpp/cpufeatures/: CMakeLists.txt  cpu-features.c  cpu-features.h
vvcdecoder/src/main/cpp/vvdec/: CMakeLists.txt
vvcdecoder/src/main/cpp/vvdec/source/Lib/vvdec/: CMakeLists.txt  vvdecimpl.cpp
vvcdecoder/src/main/java/open/source/vvdec/: VvdecDecoder.kt  VvdecDecoderException.kt  VvdecDecoderVideoRenderer.kt
vvcdecoder/src/test/java/open/source/vvdec/: ExampleUnitTest.kt
